--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.group-id=group_id
-topic.name.producer=topico.comando.teste
+spring.kafka.producer.group-id=xap
+topic.name.producer=xap
 
 # Common Kafka Properties
 auto.create.topics.enable=true
