--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,13 @@
 spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.group-id=xap
-topic.name.producer=xap
+
+# Consumer properties
+spring.kafka.consumer.group-id=xap
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Common Kafka Properties
 auto.create.topics.enable=true
+topic.name=xap
